Fix headings to HTML format, make conference names bold, increase publication spacing

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -200,7 +200,7 @@
     .publication {
         display: flex;
         gap: 15px;
-        margin-bottom: 24px;
+        margin-bottom: 32px;
         align-items: flex-start;
         
         @media (max-width: $small-width) {
